@@ -7,6 +7,7 @@ PHP 4                                                                      NEWS
 - Fixed crash bug when non-existing save/serializer handler was used. (Jani)
 - Fixed memory leak in gethostbynamel() if an error occurs. (Sara)
 - Fixed FastCGI being unable to bind to a specific IP. (Sascha)
+- Fixed bug #25604 (HAVE_SNMP_PARSE_OID undefined with phpize build). (Jani)
 - Fixed bug #25583 (Incorrect handling of paths starting with / on win32 
   inside glob() function). (Ilia)
 - Fixed bug #25570 (Possible crash in apache2handler when zend_bailout called
